Add displayBooks function that shows book objs in card elements, add style to card elements

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="book-container">
+        <div class="card">testing</div>
+    </div>
 </body>
 </html>
