--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <div class="book-container">
         <div class="card">testing</div>
+        <div class="card">testing2</div>
+        <div class="card">testing3</div>
+        <div class="card">testing4</div>
     </div>
 </body>
 </html>
