--- a/index.html
+++ b/index.html
@@ -6,6 +6,29 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="header-div">
+        <h1>My library</h1>
+        <p>Add a new book</p>
+        <div class="book-form">
+            <form>
+                <label for="book-title">Book title</label>
+                <input name="book-title">
+
+                <label for="author">Author</label>
+                <input name="author">
+            </form>
+            <form>
+                <label for="pages">Pages</label>
+                <input name="pages">
+
+                <label for="been-read">I read this already!</label>
+                <input type="checkbox" name="been-read">
+            </form>
+
+            <button>Submit book</button>
+        </div>
+    </div>
+
     <div class="book-container">
         <div class="card">testing</div>
         <div class="card">testing2</div>
