--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <h1>My library</h1>
     <div class="header-div">
-        <button id="new-book">New book</button>
+
     </div>
 
     <div class="book-container">
-        <div class="card">testing</div>
+        <!-- <div class="card">testing</div>
         <div class="card">testing2</div>
         <div class="card">testing3</div>
-        <div class="card">testing4</div>
+        <div class="card">testing4</div> -->
     </div>
 </body>
 </html>
