--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     </div>
 
     <div class="book-container">
-        <!-- <div class="card">testing</div>
+        <div class="card">Harry Potter was written by J.K. Rowling, has 500 pages and has been read before. This book's ID is fj4h83hg3ghfu</div>
         <div class="card">testing2</div>
         <div class="card">testing3</div>
-        <div class="card">testing4</div> -->
+        <div class="card">testing4</div>
     </div>
 </body>
 </html>
